@@ -31,6 +31,10 @@ int run_test ()
   NumericLinearFunction::vector_t b (1);
   NumericLinearFunction::vector_t x (5);
 
+  a.clear ();
+  b.clear ();
+  x.clear ();
+
   a(0, 0) = 1.2;
   a(0, 1) = 3.4;
   a(0, 2) = 5.6;
