@@ -1,3 +1,10 @@
+2009-05-26  Thomas Moulard  <thomas.moulard@gmail.com>
+
+	Remove use of unitialized memory.
+	* src/numeric-linear-function.cc: Restyle.
+	* tests/numeric-linear-function.cc,
+	* tests/numeric-quadratic-function.cc: Initialize matrices properly.
+
 2009-05-25  Thomas Moulard  <thomas.moulard@gmail.com>
 
 	Fix libltdl detection.
